# tokencounter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  tokencounter.spec
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: PRD_v0.2.0.md
scripts/: runtime_hook.py
src/tokencounter/: __init__.py  __main__.py  acquisition.py  app.py  config.py  constants.py  control_panel.py  hooks.py  startup.py  tokenizer_adapter.py  tooltip.py  tray.py  utils.py
tests/: test_app.py  test_config.py  test_control_panel.py  test_startup.py  test_tokenizer_adapter.py  test_tooltip.py  test_tray.py
