[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokencounter"
version = "0.1.0"
description = "Lightweight Windows desktop tool for local token counting"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "Josh Chu" },
]
readme = "README.md"
keywords = ["token", "counter", "tiktoken", "gpt", "tokenizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "pywin32>=306",
    "tiktoken>=0.7.0",
    "comtypes>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/joshchu124-max/tokencounter"
Repository = "https://github.com/joshchu124-max/tokencounter"
Changelog = "https://github.com/joshchu124-max/tokencounter/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/joshchu124-max/tokencounter/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[project.gui-scripts]
tokencounter = "tokencounter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
